@@ -3,7 +3,7 @@
 TARGET = emucon2.tos
 LIBS = -nostartfiles -nostdlib -lgcc
 CC = m68k-atari-mint-gcc
-CFLAGS = -O -Wall -DSTANDALONE_CONSOLE
+CFLAGS = -mshort -O -Wall -DSTANDALONE_CONSOLE
 
 .PHONY: default all clean
 
